# paidy-submission

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
benchmark/: locustfile.py
migrations/: 1_init_database.sql
src/: lib.rs  main.rs
src/application/: item_service.rs
src/domain/: item.rs  item_factory.rs  mod.rs  repository.rs
src/infrastructure/: connection_factory.rs  item_repository.rs  mod.rs
src/server/: configuration.rs  middleware.rs  mod.rs  server.rs  web_server.rs
src/web/: errors.rs  item_endpoint.rs  mod.rs  response.rs
tests/: connection_factory_tests.rs  item_repository_tests.rs  item_router_tests.rs  item_service_tests.rs
