[package]
name = "paidy-submission"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
rand = "0.8.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.11.0", features = ["v7"] }
log = "0.4.22"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }

[dev-dependencies]
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.4", features = ["postgres"] }